--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -2,17 +2,24 @@
 RewriteEngine On
 RewriteBase /
 
-RewriteRule ^$ /main [R=301]
+RewriteCond %{HTTP_REFERER} !blog.wrtux.top [NC]
+RewriteRule ^$ /main [R=302]
 RewriteRule ^index.html$ /main [R=301]
 
 RewriteRule ^main$ /main.html
 
 RewriteRule ^about$ /view.html
+RewriteRule ^project$ /view.html
 
 RewriteRule ^list$ /list.html
 RewriteRule ^list/ /view.html
 
 RewriteRule ^draft/ - [F]
+
+Options Indexes
+IndexOptions Charset=UTF-8
+
+IndexOptions -FancyIndexing
 
 ErrorDocument 403 /data/403.html
 ErrorDocument 404 /data/404.html
