Adjust site structure
change the directory name for uploaded static resources.

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -6,19 +6,19 @@ RewriteRule ^ - [F,END]
 RewriteCond %{HTTP_REFERER} !//(?:[^/]+\.)?wrtux\.top(?:/|$) [NC]
 RewriteRule ^$ /main [R=302,L]
 
-RewriteRule ^main$ /data/main.html
+RewriteRule ^main$ /web/main.html
 
-RewriteRule ^about$ /data/view.html
-RewriteRule ^project$ /data/view.html
+RewriteRule ^about$ /web/view.html
+RewriteRule ^project$ /web/view.html
 
-RewriteRule ^list$ /data/list.html
-RewriteRule ^list/ /data/view.html
+RewriteRule ^list$ /web/list.html
+RewriteRule ^list/ /web/view.html
 
-ErrorDocument 400 /data/error.shtml?400
-ErrorDocument 401 /data/error.shtml?401
-ErrorDocument 403 /data/error.shtml?403
-ErrorDocument 404 /data/error.shtml?404
-ErrorDocument 500 /data/error.shtml?500
+ErrorDocument 400 /web/error.shtml?400
+ErrorDocument 401 /web/error.shtml?401
+ErrorDocument 403 /web/error.shtml?403
+ErrorDocument 404 /web/error.shtml?404
+ErrorDocument 500 /web/error.shtml?500
 
 Options +Indexes
 IndexOptions Charset=UTF-8
